# Ohasynth

./: .gitignore  README.md  index.html  serve.js
.claude/: launch.json
css/: juno.css
js/: main.js
js/engine/: engine.js  presets.js  worklet.js
js/ui/: keyboard.js  midi.js  panel.js
plugin/: CMakeLists.txt
plugin/Source/: JunoDSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
